Added org and overview pages. Changed to session and current Session. Application loggin in and out not 100% still.

--- a/app/components/app-header.hbs
+++ b/app/components/app-header.hbs
@@ -1,6 +1,6 @@
 <AuMainHeader
   @brandLink={{"https://www.vlaanderen.be/nl"}}
-  @homeRoute="home"
+  @homeRoute="index"
   @appTitle="Data Monitoring"
 >
   <li class="au-c-list-horizontal__item">
