--- a/app/components/oops.hbs
+++ b/app/components/oops.hbs
@@ -4,7 +4,7 @@
       <h1 class="au-u-h1 au-u-medium">{{@title}}</h1>
       <p class="au-u-margin-bottom au-u-margin-top">{{@content}}</p>
       {{yield}}
-        <AuLink @skin="button" @route="home">Terug naar de startpagina</AuLink>
+        <AuLink @skin="button" @route="index">Terug naar de startpagina</AuLink>
     </div>
     {{#if @image}}
     <div class="au-o-grid__item au-u-1-3@small">
