--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,20 +1,16 @@
 <AuBodyContainer class="au-u-background-gray-100">
-  <section class="c-home">
+  {{!-- <section class="c-home">
     <div class="c-home-text-container">
       <div class="c-home-text">
         <AuContent>
-          <AuHeading @level="1" @skin="2">Welkom bij Data monitoring.</AuHeading>
-          <div class="c-home__visual">
-            <img
-              src="/assets/homepage-visual.svg"
-              class="c-home-visual"
-              alt=""
-              {{!template-lint-disable require-valid-alt-text}}
-            />
-          </div>
+          <AuHeading @level="1" @skin="2">Voorbeeld data monitoring overzicht</AuHeading>
           <p>Applicatie in ontwikkeling</p>
+          <p>Roles: {{this.roles}}</p>
         </AuContent>
       </div>
     </div>
-  </section>
+  </section> --}}
+
+  {{outlet}}
+
 </AuBodyContainer>
