--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,22 +1,15 @@
 $au-flex-utilities-responsive: true;
 
 // Ember appuniversum
-@import "ember-appuniversum/a-settings";
-@import "ember-appuniversum/a-tools";
-@import "ember-appuniversum/a-generic";
-@import "ember-appuniversum/a-elements";
-@import "ember-appuniversum/a-objects";
-@import "ember-appuniversum/a-components";
-@import "ember-appuniversum/a-plugins";
-@import "ember-appuniversum/a-utilities";
+@import "@appuniversum/ember-appuniversum/styles";
 
 // Components
-@import "components/c-interface";
-@import "components/c-infinite-list";
-@import "components/c-description-list";
-@import "components/c-chart";
-@import "components/c-responsive-tables";
-@import "components/c-home";
+// @import "components/c-interface";
+// @import "components/c-infinite-list";
+// @import "components/c-description-list";
+// @import "components/c-chart";
+// @import "components/c-responsive-tables";
+// @import "components/c-home";
 
 // Overrides
 @import "shame";
