--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,12 +4,12 @@ $au-flex-utilities-responsive: true;
 @import "@appuniversum/ember-appuniversum/styles";
 
 // Components
-// @import "components/c-interface";
-// @import "components/c-infinite-list";
-// @import "components/c-description-list";
-// @import "components/c-chart";
-// @import "components/c-responsive-tables";
-// @import "components/c-home";
+@import "components/c-interface";
+@import "components/c-infinite-list";
+@import "components/c-description-list";
+@import "components/c-chart";
+@import "components/c-responsive-tables";
+@import "components/c-home";
 
 // Overrides
 @import "shame";
