--- a/app/templates/home/org.hbs
+++ b/app/templates/home/org.hbs
@@ -1,10 +1,8 @@
 <AuContent>
   <AuHeading @level="1" @skin="2">Voorbeeld pagina organisatie rapport</AuHeading>
   <p>Applicatie in ontwikkeling</p>
-  {{log "qsldkfjqsmldfkjqsmldkf 1"}}
-  <p>Roles: {{this.roles}}</p>
-  {{log "qsldkfjqsmldfkjqsmldkf 2"}}
-  {{!-- <p>Mocklogin: {{if this.isMockLogin "Ja" "nee"}}</p> --}}
-  {{log "qsldkfjqsmldfkjqsmldkf 3"}}
   <p>Test: {{if this.loketSession.isMockLoginSession "Ja" "Nee"}}</p>
+  {{#each this.model.adminUnitCountReports as |report|}}
+    <p>{{report}}</p>
+  {{/each}}
 </AuContent>
