WIP. Spelling correct.

--- a/app/templates/home/org.hbs
+++ b/app/templates/home/org.hbs
@@ -172,7 +172,7 @@
     </div>
     <div class="c-interface__sidebar-main">
       <h3 class="au-u-h4 au-u-medium">Filters</h3>
-      <Filters::SelectMultipleFilter
+      {{!-- <Filters::SelectMultipleFilter
         @selected={{this.governingBodyList.selectedGoverningBodyClassifications}}
         @updateSelected={{this.updateSelectedGoverningBodyClassifications}}
         @id="governing-body"
@@ -182,7 +182,7 @@
         @searchField="label"
         @queryParam="bestuursorganen"
         @placeholder="Alle bestuursorganen"
-      />
+      /> --}}
       <Filters::DateRangeFilter
         @startQueryParam="begin"
         @endQueryParam="eind"
