Refactor mock login and footer

--- a/app/components/footer.hbs
+++ b/app/components/footer.hbs
@@ -1,27 +1,30 @@
 <AuMainFooter>
-  <AuContent @skin="tiny">
-    <AuHeading @level="2" @skin="6">
-      geen-url-opgegeven.be is een officiële website van de Vlaamse overheid
-    </AuHeading>
-    <p class="au-u-margin-top-none">Uitgegeven door
-      <a
+  <AuHeading @level="3" @skin="4">
+    {{this.host}}
+    is een officiële website van de Vlaamse overheid
+  </AuHeading>
+  <AuContent @skin="small">
+    <p>Uitgegeven door
+      <AuLinkExternal
         class="au-c-link"
         href="https://www.vlaanderen.be/organisaties/administratieve-diensten-van-de-vlaamse-overheid/beleidsdomein-kanselarij-en-bestuur/agentschap-binnenlands-bestuur"
-      >Agentschap Binnenlands Bestuur</a>
+      >Agentschap Binnenlands Bestuur</AuLinkExternal>
     </p>
-  </AuContent>
-  <AuContent @skin="tiny">
     <ul class="au-c-list-horizontal">
       <li class="au-c-list-horizontal__item">
-        <FooterLink @route="disclaimer">Disclaimer</FooterLink>
+        <AuLink @route="legal.disclaimer" @skin="secondary">Disclaimer</AuLink>
       </li>
       <li class="au-c-list-horizontal__item">
-        <FooterLink @route="cookie-notice">Cookieverklaring</FooterLink>
+        <AuLink
+          @route="legal.cookiestatement"
+          @skin="secondary"
+        >Cookieverklaring</AuLink>
       </li>
       <li class="au-c-list-horizontal__item">
-        <FooterLink
-          @route="accessibility-statement"
-        >Toegankelijkheidsverklaring</FooterLink>
+        <AuLink
+          @route="legal.accessibilitystatement"
+          @skin="secondary"
+        >Toegankelijkheidsverklaring</AuLink>
       </li>
     </ul>
   </AuContent>
