--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,5 @@
 {{page-title "Data monitoring"}}
+
 <AuBodyContainer class="au-u-background-gray-100">
   <section class="c-home">
     <div class="c-home-text-container">
@@ -19,3 +20,4 @@
     </div>
   </section>
 </AuBodyContainer>
+<Footer />
