--- a/app/components/static-page.hbs
+++ b/app/components/static-page.hbs
@@ -2,46 +2,12 @@
   <AuContentHeader @titlePartOne="Vlaanderen" @titlePartTwo="Digitaal Loket">
     <img
       sizes="50vw"
-      src="/assets/images/loket-header-1600.jpg"
-      srcset="/assets/images/loket-header-320.jpg 320w, /assets/images/loket-header-1024.jpg 1024w, /assets/images/loket-header-1600.jpg 1600w"
+      src="/assets/header-1600.webp"
+      srcset="/assets/header-320.webp 320w, /assets/header-1024.webp 1024w, /assets/header-1600.webp 1600w"
       alt=""
     />
   </AuContentHeader>
 
   {{yield}}
-  <AuMainFooter>
-    <AuHeading @level="3" @skin="4">
-      contactgegevens.lokaalbestuur.vlaanderen.be is een officiële website van
-      de Vlaamse overheid
-    </AuHeading>
-    <AuContent @skin="small">
-      <p>Uitgegeven door
-        <a
-          class="au-c-link"
-          href="https://www.vlaanderen.be/organisaties/administratieve-diensten-van-de-vlaamse-overheid/beleidsdomein-kanselarij-en-bestuur/agentschap-binnenlands-bestuur"
-        >Agentschap Binnenlands Bestuur</a>
-      </p>
-      <ul class="au-c-list-horizontal">
-        <li class="au-c-list-horizontal__item">
-          <AuLink
-            @route="legal.disclaimer"
-            @skin="secondary"
-          >Disclaimer</AuLink>
-        </li>
-        <li class="au-c-list-horizontal__item">
-          <AuLink
-            @route="legal.cookiestatement"
-            @skin="secondary"
-          >Cookieverklaring</AuLink>
-        </li>
-        <li class="au-c-list-horizontal__item">
-          <AuLink
-            @route="legal.accessibilitystatement"
-            @skin="secondary"
-          >Toegankelijkheidsverklaring</AuLink>
-        </li>
-      </ul>
-    </AuContent>
-  </AuMainFooter>
-
 </div>
+<Footer />
