--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -329,3 +329,11 @@ ul.au-c-pagination__list > li {
   margin-top: 6px;
   list-style-type: none;
 }
+
+img {
+  max-width: none;
+}
+
+#page-not-found .au-o-grid {
+  height: 100%;
+}
