--- a/app/components/footer-link.hbs
+++ b/app/components/footer-link.hbs
@@ -1,1 +1,5 @@
-<AuLink @route={{@route}} @skin="secondary" {{on "click" this.linkFocus}}>{{yield}}</AuLink>
+<AuLink
+  @route={{@route}}
+  @skin="secondary"
+  {{on "click" this.linkFocus}}
+>{{yield}}</AuLink>
