--- a/app/components/loader-full-page.hbs
+++ b/app/components/loader-full-page.hbs
@@ -1,5 +1,7 @@
-<AuBodyContainer class="au-u-flex au-u-flex--center au-u-flex--vertical-center au-u-flex--column">
-    <Loader @content={{@content}}>
-        {{yield}}
-    </Loader>
+<AuBodyContainer
+  class="au-u-flex au-u-flex--center au-u-flex--vertical-center au-u-flex--column"
+>
+  <Loader @content={{@content}}>
+    {{yield}}
+  </Loader>
 </AuBodyContainer>
