--- a/app/templates/accessibility-statement.hbs
+++ b/app/templates/accessibility-statement.hbs
@@ -13,7 +13,9 @@
       </p>
       <p>
         Deze toegankelijkheidsverklaring is van toepassing op
-        <AuLinkExternal href="https://geen-url-opgegeven.be">https://geen-url-opgegeven.be</AuLinkExternal>
+        <AuLinkExternal
+          href="https://geen-url-opgegeven.be"
+        >https://geen-url-opgegeven.be</AuLinkExternal>
       </p>
 
       <h2>Nalevingsstatus</h2>
