Add hideMessage to AuLoader to prevent deprecation

--- a/app/components/app-header.hbs
+++ b/app/components/app-header.hbs
@@ -1,5 +1,5 @@
 <AuMainHeader
-  @brandLink={{"https://www.vlaanderen.be/nl"}}
+  @brandLink="https://www.vlaanderen.be/nl"
   @homeRoute="index"
   @appTitle="Data Monitoring"
 >
