--- a/app/components/infinite-list.hbs
+++ b/app/components/infinite-list.hbs
@@ -8,7 +8,7 @@
   </ul>
   <div class="au-u-flex au-u-flex--center au-u-padding-top">
     {{#if @isLoading}}
-      <AuLoader />
+      <AuLoader @hideMessage={{true}} />
     {{else if this.moreDataToLoad}}
       <AuButton
         @icon="add"
