--- a/app/templates/mock-login.hbs
+++ b/app/templates/mock-login.hbs
@@ -26,7 +26,7 @@
         </p>
         <ul>
           {{#if this.model.accounts.isRunning}}
-            <AuLoader />
+            <AuLoader @hideMessage={{true}} />
           {{else}}
             {{#each this.model.accounts.value as |account|}}
               <li>
